--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,14 +26,33 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="LAT: 0 AND LOG: 0" />
+            android:text="LAST SAVE : ---" />
 
-        <Button
-            android:id="@+id/btn_catch_gps"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="@string/dev_btn_gps" />
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btn_catch_gps"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:autoText="false"
+                android:background="@android:color/holo_red_dark"
+                android:text="@string/dev_btn_gps"
+                android:textColor="#FFFFFF" />
+
+            <Button
+                android:id="@+id/btn_map"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@android:color/holo_blue_dark"
+                android:text="MAPA"
+                android:textColor="#FDFDFD" />
+        </LinearLayout>
 
     </LinearLayout>
 
