--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,18 +6,23 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="30dp"
+        android:layout_height="50dp"
+        android:layout_weight="1"
+        android:background="#FFFFFF"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="0dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_height="50dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/progressBar"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
@@ -25,8 +30,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:background="#FFFFFF"
             android:gravity="center"
-            android:text="LAST SAVE : ---" />
+            android:text="LAST PLACE : ---" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -52,6 +58,7 @@
                 android:background="@android:color/holo_blue_dark"
                 android:text="MAPA"
                 android:textColor="#FDFDFD" />
+
         </LinearLayout>
 
     </LinearLayout>
@@ -60,12 +67,6 @@
         android:id="@+id/linearLayout"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -78,7 +79,9 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="#1468AF"
-            android:text="@string/btn_ok" />
+            android:text="@string/btn_ok"
+            android:textColor="#FFFFFF"
+            android:textSize="30sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -92,7 +95,9 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="#40AF04"
-                android:text="@string/btn_yes" />
+                android:text="@string/btn_yes"
+                android:textColor="#FFFFFF"
+                android:textSize="30sp" />
 
             <Button
                 android:id="@+id/btn_no"
@@ -100,7 +105,9 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="#990000"
-                android:text="@string/btn_no" />
+                android:text="@string/btn_no"
+                android:textColor="#FFFFFF"
+                android:textSize="30sp" />
         </LinearLayout>
     </LinearLayout>
 
